2003-05-07  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Corrected a problem which was causing the 
	NSVisible array in the nameTable to become corrupted when 
	using custom classes.  Also added a NSDebugLog call to help
	find problems in the nameTable.
	
2003-05-07  Gregory John Casamento <greg_casamento@yahoo.com>

	Applied patch submitted by Rob Burns
	* GNUmakefile: Added FileIcon_gmodel.tiff.
	* GormInfo.plist: Added FileIcon_gmodel.tiff as default
	icon for gmodel files.
	
2003-04-30  Adam Fedor  <fedor@gnu.org>

	* Palettes/*/GNUmakefile: Set *_STANDARD_INSTALL=no to not install
	the palettes.

2003-04-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Gorm.m: Minor updates to compile with latest gui ... use void return
	for saving documents.
	* GormDocument.h: ditto
	* GormDocument.m: as above, plus a few fixes for bugs that have crept
	in to the toolbar due to gui changes ... tweak layout a little, make
	the button highlighting correct, and use a button subclass to avoid
	new matrix behavior of setting the buttons to do the ugly
	showsFirstResponder stuff.

2003-03-06  Gregory Casamento <greg_casamento@yahoo.com>

	* GormFilesOwner.m: Corrected minor problem with updating
	class names for the file's owner inspector.   It was not updating
	the list when reselecting the same object, so new classes were not
	being displayed.
	
2003-03-05  Adam Fedor  <fedor@gnu.org>

	* Version: 0.2.6

2003-03-04  Fabien <fabien@tuxfamily.org>

	* Palettes/3Containers/inspectors.m: Update TabView inspector
	* Palettes/4Data/inspectors.m: Update comboBox inspector.

2003-03-04  Adam Fedor  <fedor@gnu.org>

	* Gorm.m ([Gorm -infoPanel:sender]): Update application name.

	* Palettes/0Menus/main.m ([MenusPalette -finishInstantiate]): Use
	orderFrontStandardInfoPanel for Info menu item.

2003-03-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Gorm.h:
	* Gorm.m:
	* GormBoxEditor.h:
	* GormBoxEditor.m:
	* GormButtonEditor.h:
	* GormButtonEditor.m: